<resources>

    <string name="app_name">Passbook</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_passbook">Passbook</string>
    <string name="placeholder">Passbook placeholder</string>
    <string name="registration">Registration</string>
    <string name="username_hint">username</string>
    <string name="fullname_hint">fullname</string>
    <string name="password_hint">password</string>
    <string name="confirm_hint">confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="userNameField">Enter username</string>
    <string name="passField">Enter password</string>
    <string name="loginBtn">Login</string>
    <string name="regBtn">Registration</string>
    <string name="lang_promt">Select language</string>
    <string name="ok">OK</string>

    <string-array name="lang_arrays">
        <item>English</item>
        <item>Russian</item>
    </string-array>

</resources>