<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:text="@string/placeholder"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:context=".PassbookActivity" />

    <EditText
        android:id="@+id/l_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userNameField" />

    <EditText
        android:id="@+id/l_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passField" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="32dp" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/loginBtn" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/regBtn" />
    </LinearLayout>

</LinearLayout>